2012-08-30  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r127171.
        http://trac.webkit.org/changeset/127171
        https://bugs.webkit.org/show_bug.cgi?id=95505

        testRunner does not need dumpWebNotificationCallbacks().
        (Requested by jonlee on #webkit).

        * DumpRenderTree/TestRunner.cpp:
        (TestRunner::TestRunner):
        (TestRunner::staticFunctions):
        * DumpRenderTree/TestRunner.h:
        (TestRunner):
        * DumpRenderTree/mac/MockWebNotificationProvider.mm:
        (-[MockWebNotificationProvider webView:didShowNotification:]):
        (-[MockWebNotificationProvider webView:didClickNotification:]):
        (-[MockWebNotificationProvider webView:didCloseNotifications:]):
        * DumpRenderTree/mac/UIDelegate.mm:
        (-[UIDelegate webView:decidePolicyForNotificationRequestFromOrigin:listener:]):

2012-08-30  Pratik Solanki  <psolanki@apple.com>

        objc_msgSend and IMP should be cast appropriately before using
        https://bugs.webkit.org/show_bug.cgi?id=95242

        Reviewed by Benjamin Poulain.

        Use wtfObjcMsgSend and wtfCallIMP templates which do appropriate casts
        to a function pointer with right types when calling objc_msgSend and an
        IMP method directly.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (drt_NSFontManager_availableFontFamilies):
        * WebKitTestRunner/InjectedBundle/mac/ActivateFonts.mm:
        (WTR::wtr_NSFontManager_availableFontFamilies):

2012-08-30  Benjamin Poulain  <bpoulain@apple.com>

        Replace JSC::UString by WTF::String
        https://bugs.webkit.org/show_bug.cgi?id=95271

        Reviewed by Geoffrey Garen.

        Get rid of UString.

        * DumpRenderTree/efl/WorkQueueItemEfl.cpp:
        * gdb/webkit.py:
        (WTFStringPrinter.to_string):
        (JSCIdentifierPrinter.to_string):
        (JSCJSStringPrinter.to_string):
        (add_pretty_printers):
